[package]
name = "nasir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.17", features = ["derive"] }
crossterm = "0.26.1"
image = "0.24.6"
lazy-regex = "3.0.0"
regex = "1.9.1"
reqwest = { version = "0.11.18", features = ["blocking"] }
tokio = { version = "1.29.1", features = ["rt"] }
